# ChangeLog for net-p2p/gnunet-gtk
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Jul 2008; Ycarus <ycarus@zugaina.org> +gnunet-gtk-0.8.0a.ebuild:
  Bump to version 0.8.0a

  15 Jun 2008; <ycarus@zugaina.org> +gnunet-gtk-0.8.0_pre1.ebuild,
  +gnunet-gtk-0.8.0.ebuild:
  Bump to version 0.8.0
