@@ -1,5 +1,5 @@
 DIST qstardict-0.13.1.tar.bz2 385053 RMD160 dc779bf16f0d42eb9fe173f53722cd32f4d8a5e9 SHA1 ec10d6a8fa010b7af5a87f38e43a9c3d4209ef49 SHA256 52cb7b699159a804158045d2ae79bf80ce28e2febc2bb3e808784242d829c9ee
-EBUILD qstardict-0.13.1.ebuild 1320 RMD160 23b9fe46785b8d69e2adddf7da3075fd5980b72c SHA1 9acb31562c95f393ebb7c8d571945af99d17e7a2 SHA256 8e0c40b5714f1aa7773ac653d5c258ef0faf53d3d6fb26923190bcd6e2a1c249
+EBUILD qstardict-0.13.1.ebuild 1293 RMD160 36d54fc942d1c6d90a1d29c1ec15393678bd2eaa SHA1 8f9a1d9eb52139e0df5228bfa7b19f85b8d944c7 SHA256 b73a9620ef81878f1c94a9278872491bab3bd491b0c8c34a106eba7450e13127
 EBUILD qstardict-9999.ebuild 1230 RMD160 72ab2a519457538a194b1d77568c3bd98718ba6c SHA1 5a7792c7431f77ab8a3637d83950aab7cca6649f SHA256 806c42b57274cde6ff78d6e34d75409db6753780dee4095d852e623b83ba52bf
 MISC ChangeLog 4197 RMD160 5c7b9856088ea2d14f902fd67924b8e44817d4f6 SHA1 3a30adfdf378e301a1ce4e75e3fe4a324fbe0dd1 SHA256 9192600524206727a19ee02313260909ce3136ab4e109cfeb8ed8ccffed03462
 MISC metadata.xml 425 RMD160 bd1f662636e5caab725c238135ed3e25002f3ce1 SHA1 17071c362203fc6767cb7929242a5885ea2897d5 SHA256 81735c3279f3e90a3de243c8ce54f11b8eeaddf985a7285be8e2df3db7d70e47
