@@ -1,4 +1,4 @@
 DIST gnunet-gtk-0.8.0c.tar.bz2 682748 RMD160 d33c3f3b273fc5433d634777a880939309bd9d63 SHA1 f55e21a887dc01f4801db1db7ec4e81159235b29 SHA256 f67d06f3af4e72890326592254de68668c0d80c1e6196fa6d2430823f01ef837
-EBUILD gnunet-gtk-0.8.0c.ebuild 909 RMD160 6f8f8bb61018ca7e5410996f462548c24db51812 SHA1 6a1ff13974fc9967603d7a4727b347b08b9ba7d9 SHA256 7744c95896417102c618cec99ee32c83c059e96cbfffdc1ec58cd55b6c66da73
-MISC ChangeLog 335 RMD160 0f844948bf50caac26847b635a9fb249aba7ebed SHA1 ca2a9c71abf6279e20cb00f15681746ec9b011ad SHA256 3fd9ad570263ef5ecaa36ef2c41d8d70f40faf8784e0bdae41043a81ad9ae19d
+EBUILD gnunet-gtk-0.8.0c.ebuild 902 RMD160 ee70587c00b16846c22a46cfe7d5e8df6df265fd SHA1 21cfcc57949823ce217bdc1f39f2927eb93ea11f SHA256 dc25da258f6a9f210a408dbc079bfb92379a016f7d483f355074537d9fb6ebdb
+MISC ChangeLog 442 RMD160 796c634b8b23a775393006542304beb0655260bb SHA1 402d6d0d3abc334deacca4682a8c7d7e4ee60829 SHA256 68e3cd8e01fd2d6543f21c71f45ba1a79443d59de08f076288f01500a5480e3b
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
