@@ -4,6 +4,6 @@ AUX gnunet-2 643 RMD160 fafedd387fc29a18f82bf52d57431435bb4a877e SHA1 2bad148772
 AUX gnunet-download-manager.scm 13338 RMD160 a8eaa266c3cbc012fcce4a011ad410b7f0630482 SHA1 2132de94ddeb3dbdb0f6f0935cc5aa591b1f5ca9 SHA256 a49047daf991597c869e43d300808990e3edfdf4f814a3e18b08d763fa84d7aa
 AUX gnunet.initd 643 RMD160 434eb6752143fbb600f96a58ed7c5ba1a47e654d SHA1 de7f208ce286a05310551a35345b2f02f5712831 SHA256 c6748f137d7c808685a741617e1449024bcb37dcfc11e883d859f5e0134744a6
 DIST GNUnet-0.8.0c.tar.bz2 1448541 RMD160 56820e4dfae9a257cd19bcc290de5ba050ca3728 SHA1 71e832ce5cd54df4b899f9417e20ef018b004be4 SHA256 03ad449f8acc3abb0f6afcd496dfb04a48c1eb811df57a856f46eb9334e79c22
-EBUILD gnunet-0.8.0c.ebuild 3103 RMD160 ed819b4e3b32f497b5f4e1123f58c5099d0dd602 SHA1 e2ca6b7f8e8dc6f72b42a32791d595b55b7e8bec SHA256 4dca8685add2bf9b0db1eb21b1e8b86fb0a94b58f3df802907277efc148430c8
-MISC ChangeLog 663 RMD160 2b9ec260e6e70d7062ca8b1bad46089fde3daf53 SHA1 434cbb5b891b502314550e564a8ea103c1a36bb7 SHA256 9b351d073fab91e4e173e2d636a2572578a4fc0fc12872e58eb5f69032cb32f5
+EBUILD gnunet-0.8.0c.ebuild 3054 RMD160 fcd031283d69ee361b531a89b7dc08d5a007eacf SHA1 fb4e305f4ec36c5a768d2412f12391c366739e60 SHA256 d760d99f1bda83a2d6cce7f16e24330f6d0bf974631b4882c96896add73b748b
+MISC ChangeLog 764 RMD160 f6701ce8e8533d92c14582b1aea9afa2b2324dc6 SHA1 acdebb3c36d86b0192ffbb01f6bb9578feee3cdd SHA256 077c1321bc141c97c224936c61edb6d1505675cf163ba2f658198fa110c83379
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
