@@ -2,6 +2,7 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+EAPI=1
 inherit eutils autotools
 
 S="${WORKDIR}/GNUnet-${PV}"
@@ -12,7 +13,7 @@ SRC_URI="http://gnunet.org/download/GNUnet-${PV}.tar.bz2"
 RESTRICT="test"
 
 IUSE="ipv6 mysql sqlite qt4 ncurses nls gtk"
-KEYWORDS="~amd64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~amd64 ~x86"
 LICENSE="GPL-2"
 SLOT="0"
 
@@ -21,17 +22,16 @@ DEPEND=">=dev-libs/libgcrypt-1.2.0
 	>=net-libs/libmicrohttpd-0.4.0
 	>=dev-libs/gmp-4.0.0
 	gnome-base/libglade
-	sys-libs/zlib
 	net-misc/curl
-	sys-apps/sed
 	>=dev-scheme/guile-1.8.0
 	ncurses? ( sys-libs/ncurses )
 	mysql? ( >=virtual/mysql-4.0 )
 	sqlite? ( >=dev-db/sqlite-3.0.8 )
-	nls? ( sys-devel/gettext )"
-RDEPEND="${DEPEND}
-	gtk? ( =net-p2p/gnunet-gtk-${PV} )
-	qt4? ( =net-p2p/gnunet-qt-${PV} )"
+	nls? ( sys-devel/gettext )
+	gtk? ( ~net-p2p/gnunet-gtk-${PV} )
+	qt4? ( ~net-p2p/gnunet-qt-${PV} )"
+
+RDEPEND="${DEPEND}"
 
 pkg_setup() {
 	if ! use mysql && ! use sqlite; then
@@ -87,11 +87,11 @@ src_compile() {
 		$(use_enable ncurses) \
 		${myconf} || die "econf failed"
 
-	emake -j1 || die "emake failed"
+	make  || die "emake failed"
 }
 
 src_install() {
-	emake DESTDIR="${D}" -j1 install || die "make install failed"
+	make DESTDIR="${D}" install || die "make install failed"
 	dodoc AUTHORS ChangeLog INSTALL NEWS PLATFORMS README README.fr UPDATING
 	insinto /etc
 	doins contrib/gnunet.conf
