@@ -9,9 +9,9 @@ games-simulation/vegastrike
 # 21 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
 # Bad keywors
 
-net-p2p/gnunet
-net-p2p/gnunet-gtk
-net-p2p/gnunet-qt
+#net-p2p/gnunet
+#net-p2p/gnunet-gtk
+#net-p2p/gnunet-qt
 
 # 20 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
 # mask mail-client/xuheki, not complete,bad depend
