@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> gnunet-0.8.0c.ebuild:
+  drop untested keywords
+
   07 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> gnunet-0.8.0c.ebuild:
   repoman RDEPEND.suspect
 
