@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/gnunet-gtk
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  27 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  gnunet-gtk-0.8.0c.ebuild:
+  drop untested keywords
 
   30 Jul 2008; Ycarus <ycarus@zugaina.org> +gnunet-gtk-0.8.0a.ebuild:
   Bump to version 0.8.0a
